--- a/translations/kangyur/translations/091-009_toh612,923-the_dharani_of_the_armlet_atop_the_standard.xml
+++ b/translations/kangyur/translations/091-009_toh612,923-the_dharani_of_the_armlet_atop_the_standard.xml
@@ -31,7 +31,7 @@
                 <editor role="TEImarkupEditor" xml:id="UT22084-091-009-70">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2024</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -39,7 +39,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="2.a">
+                <availability status="2">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -158,6 +158,12 @@
                 <change who="#line-tofte" when="2024-07-12T09:11:17.329Z" type="text-version" status="0.0.17" xml:id="UT22084-091-009-71">
                     <desc>Auto (update-contributors)</desc>
                 </change>
+                <change who="#line-tofte" when="2024-11-11T15:31:09.66Z" type="translation-status" status="2" xml:id="UT22084-091-009-145">
+                    <desc>2</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-11T15:31:09.66Z" type="text-version" status="0.0.2" xml:id="UT22084-091-009-146">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -166,7 +172,7 @@
                     Outline to the text is quite complex, it is recommended that you paste the outlined contents from the DOCX here as a comment for
                     markup's reference. The actual table of contents will be generated in the Reading Room by the parser.-->
         <front>
-            <div type="summary">
+            <div type="summary" xml:id="UT22084-091-009-summary">
                 <head type="summary" tid="1">Summary</head>
                 <milestone unit="chunk" xml:id="UT22084-091-009-72"/>
                 <p tid="2">
@@ -182,7 +188,7 @@
                     protection, and granting all good things such as good reputation and
                     abundance.</p>
             </div>
-            <div type="acknowledgment">
+            <div type="acknowledgment" xml:id="UT22084-091-009-acknowledgment">
                 <head type="acknowledgment" tid="3">Acknowledgements</head>
                 <milestone unit="chunk" xml:id="UT22084-091-009-73"/>
                 <p tid="4">This dhāraṇī was translated by Gyurme Avertin. Kedar and Rubi Prado
@@ -195,7 +201,7 @@
                     and the introduction, and Dawn Collins copyedited the text. Martina Cotter was
                     in charge of the digital publication process.</p>
             </div>
-            <div type="introduction">
+            <div type="introduction" xml:id="UT22084-091-009-introduction">
                 <head type="introduction" tid="7">Introduction</head>
                 <div type="section" xml:id="UT22084-091-009-introduction-1">
                     <milestone unit="chunk" xml:id="UT22084-091-009-76"/>
@@ -295,7 +301,7 @@
             </div>
         </front>
         <body>
-            <div type="translation">
+            <div type="translation" xml:id="UT22084-091-009-translation">
                 <head type="translation">The Translation</head>
                 <head type="titleHon" tid="14">The Noble Dhāraṇī of</head>
                 <head type="titleMain" tid="15">Dhvajāgrakeyūrā</head>
@@ -432,10 +438,10 @@
             </div>
         </body>
         <back>
-            <div type="notes">
+            <div type="notes" xml:id="UT22084-091-009-notes">
                 <head type="notes" tid="30">Notes</head>
             </div>
-            <div type="listBibl">
+            <div type="listBibl" xml:id="UT22084-091-009-listBibl">
                 <head type="listBibl" tid="32">Bibliography</head>
                 <div type="section" xml:id="UT22084-091-009-listBibl-1">
                     <head type="section" tid="34">Primary Sources</head>
@@ -495,7 +501,7 @@
                             Languages</title>. Delhi: Motilal Banarsidass, 2005.</bibl>
                 </div>
             </div>
-            <div type="glossary" status="excluded">
+            <div type="glossary" status="excluded" xml:id="UT22084-091-009-glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-091-009-118">
