--- a/translations/tengyur/placeholders/021-001_toh1420-srisamvarodayamahatantrarajapadmininamapanjika.xml
+++ b/translations/tengyur/placeholders/021-001_toh1420-srisamvarodayamahatantrarajapadmininamapanjika.xml
@@ -12,11 +12,11 @@
                 <author role="translatorEng" xml:id="UT23703-021-001-9">Wiesiek Mical</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT23703-021-001"/>
             </publicationStmt>
             <sourceDesc>
@@ -53,6 +53,12 @@
                 </change>
                 <change who="#line-tofte" when="2023-12-07T11:20:40.911Z" type="text-version" status="0.0.1" xml:id="UT23703-021-001-11">
                     <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-12T12:14:21.332Z" type="translation-status" status="2.h" xml:id="UT23703-021-001-12">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-12T12:14:21.332Z" type="text-version" status="0.0.2" xml:id="UT23703-021-001-13">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
