--- a/translations/kangyur/placeholders/078-004_toh373-the_tantra_of_the_arising_of_samvara.xml
+++ b/translations/kangyur/placeholders/078-004_toh373-the_tantra_of_the_arising_of_samvara.xml
@@ -9,16 +9,18 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">bde mchog 'byung ba'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Śrīmahāśaṃvarodayanāmatantrarāja</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal bde mchog 'byung ba zhes bya ba'i rgyud kyi rgyal po chen po/</title>
+                <title type="otherTitle" xml:lang="zh">《勝樂律生精要續》</title>
                 <author role="translatorMain" xml:id="UT22084-078-004-5">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-078-004-6">Wiesiek Mical</author>
+                <sponsor xml:id="UT22084-078-004-9">Anonymous</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-078-004"/>
             </publicationStmt>
             <sourceDesc>
@@ -48,6 +50,18 @@
                 </change>
                 <change who="#line-tofte" when="2023-10-06T13:27:05.331Z" type="text-version" status="0.0.4" xml:id="UT22084-078-004-7">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-04-29T16:38:02.292Z" type="text-version" status="0.0.5" xml:id="UT22084-078-004-8">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-07-11T13:04:26.596Z" type="text-version" status="0.0.6" xml:id="UT22084-078-004-10">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-12T12:15:37.767Z" type="translation-status" status="2.h" xml:id="UT22084-078-004-11">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-12T12:15:37.767Z" type="text-version" status="0.0.7" xml:id="UT22084-078-004-12">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
