--- a/translations/kangyur/translations/066-013_toh255-the_ocean_of_the_dharma.xml
+++ b/translations/kangyur/translations/066-013_toh255-the_ocean_of_the_dharma.xml
@@ -26,7 +26,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-066-013-206">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -160,6 +160,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-10-31T20:27:13.682Z" type="text-version" status="1.0.0" xml:id="UT22084-066-013-213">
                     <desc>First published version.</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-11-15T18:19:55.097Z" type="text-version" status="1.0.1" xml:id="UT22084-066-013-214">
+                    <desc>updated typo.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -870,7 +873,7 @@
                             <term type="translationMain">bases of suffering</term>
                             <term status="verified" xml:lang="Bo-Ltn" n="1">gnas ngan len </term>
                             <term xml:lang="bo" n="1">གནས་ངན་ལེན།</term>
-                            <term status="verified" xml:lang="Sa-Ltn" type="attestedDictionary">dauṣthulya</term>
+                        <term status="verified" xml:lang="Sa-Ltn" type="attestedDictionary">dauṣṭhulya</term>
                             <note type="definition">
                                 <p>A term that includes all the many factors,
                                     whether associated with body, speech, or mind, that underlie
