--- a/translations/kangyur/placeholders/035-019_toh44-19-chapter_19_the_verses_of_the_assembly_of_bodhisattvas.xml
+++ b/translations/kangyur/placeholders/035-019_toh44-19-chapter_19_the_verses_of_the_assembly_of_bodhisattvas.xml
@@ -12,11 +12,11 @@
                 <editor role="projectEditor" xml:id="UT22084-035-019-14">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-035-019"/>
             </publicationStmt>
             <sourceDesc>
@@ -66,6 +66,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-16T13:48:28.899Z" type="text-version" status="0.0.8" xml:id="UT22084-035-019-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-18T11:02:15.749Z" type="translation-status" status="2.e" xml:id="UT22084-035-019-18">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-18T11:02:15.749Z" type="text-version" status="0.0.9" xml:id="UT22084-035-019-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
