--- a/translations/kangyur/translations/001-001_toh1-1_chapter_on_going_forth.xml
+++ b/translations/kangyur/translations/001-001_toh1-1_chapter_on_going_forth.xml
@@ -31,7 +31,7 @@
                 <sponsor xml:id="UT22084-001-001-133560">Irene Tillman</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.37.15 <date>2024</date>
+                <edition>v 1.37.16 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -255,6 +255,9 @@
                 </change>
                 <change who="#john" when="2024-10-30T15:11:43.124Z" type="text-version" status="1.37.15" xml:id="UT22084-001-001-133628">
                     <desc>Change to title of ch. 13 of Toh 1.</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-11-18T15:25:09.279Z" type="text-version" status="1.37.16" xml:id="UT22084-001-001-133629">
+                    <desc>updated milestone 1.365.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -3049,9 +3052,7 @@
                         <milestone unit="chunk" xml:id="UT22084-001-001-693"/>
                         <p tid="602"><!--module starts--> “Monks,” replied the Blessed One, “Śāriputra himself discovered the store of action, mastered
                             conditions, tended to them as one does an irrigation channel, and emerged without indecision. As he himself acted and accumulated
-                            thus, no one else experiences the results of actions and accumulations as Śāriputra has done. <ref cRef="F.41.a" type="folio" xml:id="UT22084-001-001-29120"/> Monks, actions and accumulations do not ripen upon the outer elements. They do not ripen upon
-                            the element of water, upon the element of fire, nor upon the element of wind. The virtuous and nonvirtuous actions performed and
-                            accumulated come to fruition upon the aggregates, elements, and seats of the senses of the one who performed them:</p>
+                            thus, no one else experiences the results of actions and accumulations as Śāriputra has done. <ref cRef="F.41.a" type="folio" xml:id="UT22084-001-001-29120"/> Monks, actions committed and accumulated do not ripen in the external element of earth. Neither do they ripen in the element of water, nor the element of fire, nor the element of wind. Actions committed and accumulated, whether virtuous or non-virtuous, ripen only into the appropriated aggregates, constituent elements, and seats of the senses.</p>
                         <milestone unit="chunk" xml:id="UT22084-001-001-694"/>
                         <lg tid="603">
                             <l>“Actions never waste away, </l>
