--- a/translations/kangyur/placeholders/083-011_toh463-the_secret_revelation_of_vajrapani.xml
+++ b/translations/kangyur/placeholders/083-011_toh463-the_secret_revelation_of_vajrapani.xml
@@ -14,12 +14,12 @@
                 <author role="translatorEng" xml:id="UT22084-083-011-6">Adam C. Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-083-011"/>
             </publicationStmt>
             <sourceDesc>
@@ -54,6 +54,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-02T15:19:11.668Z" type="text-version" status="0.0.5" xml:id="UT22084-083-011-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-19T11:27:00.269Z" type="translation-status" status="2.g" xml:id="UT22084-083-011-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-19T11:27:00.269Z" type="text-version" status="0.0.6" xml:id="UT22084-083-011-11">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
