--- a/translations/kangyur/placeholders/091-052_toh655,959-the_incantation_which_removes_hindrances.xml
+++ b/translations/kangyur/placeholders/091-052_toh655,959-the_incantation_which_removes_hindrances.xml
@@ -14,11 +14,11 @@
                 <author role="translatorEng" xml:id="UT22084-091-052-5">Adam C. Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-091-052"/>
             </publicationStmt>
             <sourceDesc>
@@ -63,6 +63,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-02T15:22:39.141Z" type="text-version" status="0.0.4" xml:id="UT22084-091-052-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-19T11:30:02.042Z" type="translation-status" status="2.g" xml:id="UT22084-091-052-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-19T11:30:02.042Z" type="text-version" status="0.0.5" xml:id="UT22084-091-052-11">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
