--- a/translations/kangyur/placeholders/091-056_toh659,1065-the_incantation_the_questions_of_the_naga_king_tejasvin.xml
+++ b/translations/kangyur/placeholders/091-056_toh659,1065-the_incantation_the_questions_of_the_naga_king_tejasvin.xml
@@ -17,11 +17,11 @@
                 <author role="translatorEng" xml:id="UT22084-091-056-5">Adam C. Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-091-056"/>
             </publicationStmt>
             <sourceDesc>
@@ -66,6 +66,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-02T15:27:12.204Z" type="text-version" status="0.0.6" xml:id="UT22084-091-056-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-19T11:31:12.261Z" type="translation-status" status="2.g" xml:id="UT22084-091-056-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-19T11:31:12.261Z" type="text-version" status="0.0.7" xml:id="UT22084-091-056-11">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
