--- a/translations/kangyur/placeholders/091-006_toh609,925-the_incantation_that_confers_fearlessness.xml
+++ b/translations/kangyur/placeholders/091-006_toh609,925-the_incantation_that_confers_fearlessness.xml
@@ -12,13 +12,14 @@
                 <author role="translatorMain" xml:id="UT22084-091-006-4">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-091-006-5">Lowell Cook</author>
                 <editor role="projectEditor" xml:id="UT22084-091-006-14">Torsten Gerloff</editor>
+                <editor role="copyEditor" xml:id="UT22084-091-006-23">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-091-006"/>
             </publicationStmt>
             <sourceDesc>
@@ -84,6 +85,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-17T13:36:01.785Z" type="text-version" status="0.0.8" xml:id="UT22084-091-006-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-17T13:36:38.633Z" type="text-version" status="0.0.9" xml:id="UT22084-091-006-24">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-19T12:17:21.104Z" type="translation-status" status="2.d" xml:id="UT22084-091-006-25">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-19T12:17:21.104Z" type="text-version" status="0.0.10" xml:id="UT22084-091-006-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
