--- a/translations/kangyur/placeholders/096-072_toh823,1106-auspiciousness_for_the_three_families.xml
+++ b/translations/kangyur/placeholders/096-072_toh823,1106-auspiciousness_for_the_three_families.xml
@@ -11,13 +11,14 @@
                 <author role="translatorMain" xml:id="UT22084-096-072-9">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-096-072-10">Bruno Galasek-Hul</author>
                 <editor role="projectEditor" xml:id="UT22084-096-072-19">Ryan Damron</editor>
+                <editor role="copyEditor" xml:id="UT22084-096-072-26">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-096-072"/>
             </publicationStmt>
             <sourceDesc>
@@ -95,6 +96,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-11-05T10:57:27.82Z" type="text-version" status="0.0.7" xml:id="UT22084-096-072-22">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T10:58:48.299Z" type="text-version" status="0.0.8" xml:id="UT22084-096-072-27">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-19T12:50:03.266Z" type="translation-status" status="2.d" xml:id="UT22084-096-072-28">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-19T12:50:03.266Z" type="text-version" status="0.0.9" xml:id="UT22084-096-072-29">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
