--- a/translations/kangyur/placeholders/096-074_toh825-auspiciousness_for_the_three_families.xml
+++ b/translations/kangyur/placeholders/096-074_toh825-auspiciousness_for_the_three_families.xml
@@ -10,13 +10,14 @@
                 <author role="translatorMain" xml:id="UT22084-096-074-8">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-096-074-9">Bruno Galasek-Hul</author>
                 <editor role="projectEditor" xml:id="UT22084-096-074-17">Ryan Damron</editor>
+                <editor role="copyEditor" xml:id="UT22084-096-074-24">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-096-074"/>
             </publicationStmt>
             <sourceDesc>
@@ -81,6 +82,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-11-05T10:59:29.417Z" type="text-version" status="0.0.6" xml:id="UT22084-096-074-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T11:00:07.512Z" type="text-version" status="0.0.7" xml:id="UT22084-096-074-25">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-19T12:51:10.436Z" type="translation-status" status="2.d" xml:id="UT22084-096-074-26">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-19T12:51:10.436Z" type="text-version" status="0.0.8" xml:id="UT22084-096-074-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
