--- a/translations/kangyur/placeholders/066-011_toh253-the_sutra_on_the_threefold_teaching.xml
+++ b/translations/kangyur/placeholders/066-011_toh253-the_sutra_on_the_threefold_teaching.xml
@@ -9,17 +9,18 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">chos gsum pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Tridharmakanāmasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">chos gsum pa zhes bya ba'i mdo</title>
-                <author role="translatorMain" xml:id="UT22084-066-011-1"/>
+                <author role="translatorMain" xml:id="UT22084-066-011-1">Bhikṣuṇī Thubten Damcho and team</author>
                 <consultant role="projectManager" xml:id="UT22084-066-011-2">Bhikṣuṇī Thubten Damcho</consultant>
                 <author role="translatorEng" xml:id="UT22084-066-011-3">Bhikṣuṇī Thubten Damcho</author>
-                <author role="translatorEng" xml:id="UT22084-066-011-4">Norbu Samphel </author>
+                <author role="translatorEng" xml:id="UT22084-066-011-4">Norbu Samphel</author>
+                <editor role="projectEditor" xml:id="UT22084-066-011-24">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-066-011"/>
                 <date/>
             </publicationStmt>
@@ -79,6 +80,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-24T12:41:02.312Z" type="text-version" status="0.0.9" xml:id="UT22084-066-011-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-24T12:41:46.417Z" type="text-version" status="0.0.10" xml:id="UT22084-066-011-25">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-19T13:01:24.7Z" type="translation-status" status="2.f" xml:id="UT22084-066-011-26">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-19T13:01:24.7Z" type="text-version" status="0.0.11" xml:id="UT22084-066-011-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
