--- a/translations/kangyur/translations/088-010_toh516,886-the_dharani_heap_of_flowers.xml
+++ b/translations/kangyur/translations/088-010_toh516,886-the_dharani_heap_of_flowers.xml
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-088-010-168">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -176,6 +176,9 @@
                 <change who="#martina-cotter" when="2024-11-15T18:28:50.99Z" type="text-version" status="1.0.2" xml:id="UT22084-088-010-897">
                     <desc>updated typo.</desc>
                 </change>
+                <change who="#konchog" when="2024-11-19T15:30:51.274Z" type="text-version" status="1.0.3" xml:id="UT22084-088-010-898">
+                    <desc>Changed instances of words with "worshipp" to "worship".</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -189,10 +192,10 @@
                 <milestone unit="chunk" xml:id="UT22084-088-010-42"/>
                 <p tid="2">The text comprises a teaching given by the Buddha Śākyamuni to the bodhisattva
                     Siṃhavikrīḍita in response to his question: what kind of merit does one gain by
-                    worshipping the Tathāgata? The Buddha addresses the question by stating that the merits of
-                    the awakened ones are limitless, thus any merit accrued by worshipping them, whether face
+                    worshiping the Tathāgata? The Buddha addresses the question by stating that the merits of
+                    the awakened ones are limitless, thus any merit accrued by worshiping them, whether face
                     to face or in the form of a caitya, is also limitless. What truly matters is the
-                    worshipper’s mental attitude. He then continues by teaching a dhāraṇī accompanied by a
+                    worshiper’s mental attitude. He then continues by teaching a dhāraṇī accompanied by a
                     short practice and describes its benefits.</p>
             </tei:div>
             <tei:div type="acknowledgment" xml:id="UT22084-088-010-acknowledgment">
@@ -219,12 +222,12 @@
                     <p tid="40">The dhāraṇī and the discourse that frames it is
                         delivered by Buddha Śākyamuni at Lake Anavatapta, prompted by a question from the
                         bodhisattva Siṃhavikrīḍita who wishes to know what amount of merit is
-                        gained by worshipping a buddha. The Buddha replies by slightly rebuking Siṃhavikrīḍita:
-                        since the qualities of the buddhas are endless, so too is the merit gained by worshipping
+                        gained by worshiping a buddha. The Buddha replies by slightly rebuking Siṃhavikrīḍita:
+                        since the qualities of the buddhas are endless, so too is the merit gained by worshiping
                         them. Moreover, it does not matter whether those buddhas are directly present in reality or are
                         present in the form of a caitya containing a small relic. Nor does it matter how
                         precious the offering is (although a long list of appropriate offerings is provided).
-                        What truly matters is the positive mental attitude of the worshipper, both when making
+                        What truly matters is the positive mental attitude of the worshiper, both when making
                         the offering and after the act. After this discourse, the Buddha teaches the dhāraṇī
                         meant to enhance the act of worship, and explains its benefits. </p>
                     <milestone unit="chunk" xml:id="UT22084-088-010-47"/>
@@ -426,7 +429,7 @@
                         fully awakened, perfect Buddha with various comforts for a year, <ref cRef="F.32.b" key="toh516" work="W22084"/>
                         <ref cRef="F.49.b" key="toh516" type="folio" xml:id="UT22084-088-010-143"/> a century,
                         or even a millennium. And suppose that a person who has fully adopted the resolve of
-                        awakening were, with the intent of worshipping a thus-gone one, to offer a single
+                        awakening were, with the intent of worshiping a thus-gone one, to offer a single
                             flower,<note place="end" xml:id="UT22084-088-010-73"> Here we have preferred the reading
                             of the Sanskrit testimony (see note below); the Tibetan has “some flowers.”</note>
                         pour out a handful of water, apply a drop of fragrant pigment, remove withered
