--- a/translations/kangyur/translations/072-019_toh319-the_marvelous_dharma_discourse.xml
+++ b/translations/kangyur/translations/072-019_toh319-the_marvelous_dharma_discourse.xml
@@ -26,7 +26,7 @@
                 <editor role="projectEditor" xml:id="UT22084-072-019-206">Wiesiek Mical</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -164,6 +164,9 @@
                 <change who="#laura" when="2024-11-18T12:47:06.588Z" type="text-version" status="1.0.1" xml:id="UT22084-072-019-210">
                     <desc>A bunch of copyediting things</desc>
                 </change>
+                <change who="#laura" when="2024-11-19T18:35:01.694Z" type="text-version" status="1.0.2" xml:id="UT22084-072-019-211">
+                    <desc>More bibliography corrections</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -215,9 +218,9 @@
                         <title xml:lang="en">The Marvelous Dharma Discourse</title> is found in the General Sūtra section of the Kangyur. Its
                         colophon states that it was translated by the translator-editor Bandé Yeshé Dé and the Indian preceptors Jinamitra and
                         Surendrabodhi, who were regular collaborators in the late eighth and early ninth centuries. The text is also included in the
-                        Denkarma catalog, dated to 812 <hi rend="small-caps">ce</hi>,<note place="end" xml:id="UT22084-072-019-81"> Denkarma, folio 299.b.
-                            See also Herrmann-Pfandt 2008, pp. 116–17, no. 220. </note> while in the Phangthangma inventory there are two texts listed
-                        with this name, one among the short Mahāyana sūtras and one among the Hīnayāna discourses.<note place="end" xml:id="UT22084-072-019-82"> Phangthangma, pp. 17 and 21.</note>
+                        Denkarma catalog, dated to 812 <hi rend="small-caps">ce</hi>,<note place="end" xml:id="UT22084-072-019-81"> Denkarma, folio
+                            299.b. See also Herrmann-Pfandt 2008, pp. 116–17, no. 220. </note> while in the Phangthangma inventory there are two texts
+                        listed with this name, one among the short Mahāyana sūtras and one among the Hīnayāna discourses.<note place="end" xml:id="UT22084-072-019-82"> Phangthangma, pp. 17 and 21.</note>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-072-019-83"/>
                     <p tid="11">Three Sanskrit manuscripts of the text have so far been identified in the Gilgit collection, and all three have been
@@ -406,7 +409,7 @@
                 <div type="section" xml:id="UT22084-072-019-listBibl-1">
                     <head type="section" tid="42">Tibetan Sources</head>
                     <bibl xml:id="UT22084-072-019-122">
-                        <title xml:lang="Bo-Ltn">rmad du byung ba’i chos kyi rnam grangs</title> (<title xml:lang="Sa-Ltn">Adbhuta­dharma­paryāya</title>). Toh 319, Degé Kangyur vol. 72 (mdo sde sa), folios 194.a–196.b.</bibl>
+                        <title xml:lang="Bo-Ltn">rmad du byung ba’i chos kyi rnam grangs</title> (<title xml:lang="Sa-Ltn">Adbhuta­dharma­paryāya</title>). Toh 319, Degé Kangyur vol. 72 (mdo sde, sa), folios 194.a–196.b.</bibl>
                     <bibl xml:id="UT22084-072-019-123">
                         <title xml:lang="Bo-Ltn">rmad du byung ba’i chos kyi rnam grangs</title>. bka’ ’gyur (dpe bsdur
                         ma) [Comparative Edition of the Kangyur], krung go’i bod rig pa zhib ’jug ste gnas kyi bka’ bstan dpe sdur khang (The Tibetan
@@ -422,18 +425,17 @@
                     <bibl xml:id="UT22084-072-019-126">84000. <title xml:lang="en">
                             <ref target="http://read.84000.co/translation/toh208.html">The
                                 Great Rumble</ref>
-                        </title> (<title xml:lang="Sa-Ltn">Ārya­mahāraṇa­nāma­mahāyāna­sūtra</title>, <title xml:lang="Bo-Ltn">’phags pa sgra chen po zhes bya ba theg pa chen po’i mdo</title>, Toh 208). Translated by the Subhashita
+                        </title> (<title xml:lang="Sa-Ltn">Mahāraṇa­</title>, <title xml:lang="Bo-Ltn">sgra chen po</title>, Toh 208). Translated by the Subhashita
                         Translation Group. Online publication. 84000: Translating the Words of the Buddha, 2022.</bibl>
                     <bibl xml:id="UT22084-072-019-177">———. <title xml:lang="en">
-                            <ref target="http://read.84000.co/translation/toh212.html">The
-                                Sūtra on Dependent Arising</ref>
-                        </title> (<title xml:lang="Sa-Ltn">Pratītya­samutpāda­sūtra</title>, <title xml:lang="Bo-Ltn">rten cing ’brel bar ’byung ba’mdo</title>, Toh 212). Translated by the Subhashita Translation Group.
+                            <ref target="http://read.84000.co/translation/toh212.html">The Sūtra
+                                on Dependent Arising</ref>
+                        </title> (<title xml:lang="Sa-Ltn">Pratītya­samutpāda­sūtra</title>, <title xml:lang="Bo-Ltn">rten cing ’brel bar ’byung ba’i mdo</title>, Toh 212). Translated by the Buddhavacana Translation Group.
                         Online publication. 84000: Translating the Words of the Buddha, 2016.</bibl>
-                    <bibl xml:id="UT22084-072-019-127">Bentor, Yael (1988). “The Redactions of the <title xml:lang="Sa-Ltn">Adbhuta­dharma­paryāya</title> from Gilgit.” <title xml:lang="en">Journal of the International Association of Buddhist
+                    <bibl xml:id="UT22084-072-019-128">Bentor, Yael (1987). “Miniature Stūpas, Images, and Relics: The Sanskrit Manuscripts of the
+                        Adbhutadharmaparyāya from Gilgit and Its Tibetan Translation.” Master’s thesis, Indiana University, 1987.</bibl>
+                    <bibl xml:id="UT22084-072-019-127">———(1988). “The Redactions of the <title xml:lang="Sa-Ltn">Adbhuta­dharma­paryāya</title> from Gilgit.” <title xml:lang="en">Journal of the International Association of Buddhist
                             Studies</title> 11, no. 2 (1988): 21–52.</bibl>
-                    <bibl xml:id="UT22084-072-019-128">———(1987). “Miniature Stūpas, Images, and Relics: The Sanskrit
-                            Manuscripts of the Adbhutadharmaparyāya from Gilgit and Its Tibetan Translation.” Master’s thesis, Indiana
-                        University, 1987.</bibl>
                     <bibl xml:id="UT22084-072-019-129">Herrmann-Pfandt, Adelheid. <title xml:lang="de">Die lHan kar ma: ein früher Katalog der ins
                             Tibetische übersetzten buddhistischen Texte</title>. Vienna: Verlag der österreichischen Akademie der Wissenschaften,
                         2008.</bibl>
